Remove Decodable CTAs, add freedium note

--- a/content/post/ai-mcp.adoc
+++ b/content/post/ai-mcp.adoc
@@ -27,8 +27,8 @@ The first thing I want to understand better is MCP.
 image:/images/2025/09/2025-09-03T10-32-54-772Z.webp[]
 
 
-For context, so far I've been a keen end-user of LLMs, for https://rmoff.net/2023/12/07/productivity-tools-ai-image-generators/[generating images], proof-reading my blog posts, and general lazyweb stuff like getting it to spit out the right syntax for a bash one-liner.
-I use https://rmoff.net/categories/raycast/[Raycast] with its https://manual.raycast.com/ai[Raycast AI] capabilities to interact with different models, and I've used Cursor to _vibe-code_ some https://github.com/rmoff/rmoff-blog/pull/153[useful] (and https://github.com/rmoff/rmoff-blog/pull/154/commits/30f43034ddd1217df8ad7db0d57b3153bb745f9c[less useful], fortunately never deployed) functionality for this blog.
+For context, so far I've been a keen end-user of LLMs, for link:/2023/12/07/productivity-tools-ai-image-generators/[generating images], proof-reading my blog posts, and general lazyweb stuff like getting it to spit out the right syntax for a bash one-liner.
+I use link:/categories/raycast/[Raycast] with its https://manual.raycast.com/ai[Raycast AI] capabilities to interact with different models, and I've used Cursor to _vibe-code_ some https://github.com/rmoff/rmoff-blog/pull/153[useful] (and https://github.com/rmoff/rmoff-blog/pull/154/commits/30f43034ddd1217df8ad7db0d57b3153bb745f9c[less useful], fortunately never deployed) functionality for this blog.
 
 But what I've not done so far is dig any further into the ecosystem beyond.
 Let's fix that!
