--- a/content/post/antora-2.adoc
+++ b/content/post/antora-2.adoc
@@ -119,7 +119,7 @@ image::/images/2024/01/securitydetail.webp[Detail of how security works for inte
 
 The auth for these is handled using a custom https://docs.github.com/en/apps[GitHub App] (`Antora Docs Build Bot`) https://docs.github.com/en/apps/creating-github-apps/authenticating-with-a-github-app/about-authentication-with-a-github-app#authentication-as-an-app-installation[installation] on each repository.
 
-NOTE: The auth https://rmoff.net/2023/12/19/deploying-antora-with-github-actions-and-a-private-github-repo/[can also be done] using Personal Access Tokens (PAT) but this would then be tied to a particular user's account and is therefore not suitable for an organisation.
+NOTE: The auth link:/2023/12/19/deploying-antora-with-github-actions-and-a-private-github-repo/[can also be done] using Personal Access Tokens (PAT) but this would then be tied to a particular user's account and is therefore not suitable for an organisation.
 
 When each workflow runs its first step is to use the https://github.com/actions/create-github-app-token/tree/v1/?tab=readme-ov-file[create-github-app-token] action to https://docs.github.com/en/apps/creating-github-apps/authenticating-with-a-github-app/authenticating-as-a-github-app-installation#using-an-installation-access-token-to-authenticate-as-an-app-installation[generate a GitHub App installation access token (IAT)]. This is valid for the session only, and then provides the authorisation for the intra-repository actions.
 
@@ -192,7 +192,7 @@ and the following repository variable
 
 == Addendum: Deploying Antora using AWS Amplify and GitHub Workflows
 
-For `$REASONS` we ended up using AWS Amplify. You can find the build scripts https://gist.github.com/rmoff/867322d0ff0659084981d786d9048231[here]. There are three scripts: 
+For `$REASONS` we ended up using AWS Amplify. You can find the build scripts https://gist.github.com/rmoff/867322d0ff0659084981d786d9048231[here]. There are three scripts:
 
 1. Preview deployment (triggered by a PR creation)
 2. Live deployment (triggered by a merge to `main`)
