--- a/content/post/catalogs-in-flink-sqlhands-on.adoc
+++ b/content/post/catalogs-in-flink-sqlhands-on.adoc
@@ -48,7 +48,7 @@ Run this to start the container which listens on port 9083:
 ----
 docker run --rm --detach --name hms-standalone \
 		--publish 9083:9083 \
-		ghcr.io/recap-build/hive-metastore-standalone:latest 
+		ghcr.io/recap-build/hive-metastore-standalone:latest
 ----
 Now we need to create a file that Flink is going to look for to tell it where to find the Hive Metastore.
 This is `hive-site.xml` and needs to go in Flink’s `./conf` folder (by default):
@@ -59,15 +59,15 @@ This is `hive-site.xml` and needs to go in Flink’s `./conf` folder (by default
 cat > ./conf/hive-site.xml <
 
 
-  
+
     hive.metastore.local
     false
-  
 
-  
+
+
     hive.metastore.uris
     thrift://localhost:9083
-  
+
 
 
 EOF
@@ -190,11 +190,11 @@ List databases:
 [source,sql]
 ----
 Flink SQL> SHOW DATABASES;
-+---------------+           
-| database name |           
-+---------------+           
-|       default |           
-+---------------+           
++---------------+
+| database name |
++---------------+
+|       default |
++---------------+
 1 row in set
 ----
 Create a new database & use it:
@@ -213,42 +213,42 @@ The `SHOW CURRENT` command is useful to orientate yourself in the session:
 
 [source,sql]
 ----
-Flink SQL> SHOW CURRENT CATALOG; 
-+----------------------+         
-| current catalog name |         
-+----------------------+         
-|               c_hive |         
-+----------------------+         
-1 row in set                     
-                                 
+Flink SQL> SHOW CURRENT CATALOG;
++----------------------+
+| current catalog name |
++----------------------+
+|               c_hive |
++----------------------+
+1 row in set
+
 Flink SQL> SHOW CURRENT DATABASE;
-+-----------------------+        
-| current database name |        
-+-----------------------+        
++-----------------------+
+| current database name |
++-----------------------+
 |                new_db |
-+-----------------------+        
-1 row in set    
++-----------------------+
+1 row in set
 ----
 To show that the persistence of the catalog metadata in Hive Metastore is working let's go and create a table:
 
 
 [source,sql]
 ----
-Flink SQL> CREATE TABLE foo (       
-			     c1 INT,                       
-			     c2 STRING                     
-			 ) WITH (                          
-			   'connector' = 'datagen',        
-			   'number-of-rows' = '8'          
+Flink SQL> CREATE TABLE foo (
+			     c1 INT,
+			     c2 STRING
+			 ) WITH (
+			   'connector' = 'datagen',
+			   'number-of-rows' = '8'
 			 );
-[INFO] Execute statement succeed.   
-                                    
-Flink SQL> SHOW TABLES;             
-+------------+                      
-| table name |                      
-+------------+                      
-|        foo |                      
-+------------+                      
+[INFO] Execute statement succeed.
+
+Flink SQL> SHOW TABLES;
++------------+
+| table name |
++------------+
+|        foo |
++------------+
 1 row in set
 ----
 We'll query it, just to make sure things are working:
@@ -295,8 +295,8 @@ Because we're using the Hive catalog and not the in-memory one, we should see th
 
 [source,sql]
 ----
-Flink SQL> SHOW TABLES IN `c_hive`.`new_db`;  
-[ERROR] Could not execute SQL statement. Reason:                            
+Flink SQL> SHOW TABLES IN `c_hive`.`new_db`;
+[ERROR] Could not execute SQL statement. Reason:
 org.apache.flink.table.api.ValidationException: Catalog c_hive does not exist
 ----
 Oh noes!
@@ -326,7 +326,7 @@ Flink SQL> SHOW TABLES IN `c_hive`.`new_db`;
 +------------+
 |        foo |
 +------------+
-1 row in set     
+1 row in set
 ----
 In this sense, when we create a catalog in Flink it's more like creating a _connection_.
 Once that connection is created, whatever metadata is stored the other side of it becomes available to Flink.
@@ -384,12 +384,12 @@ Well it's completely self-contained; there is no real data, just `datagen`:
 
 [source,shell]
 ----
-CREATE TABLE foo (       
-     c1 INT,                       
-     c2 STRING                     
- ) WITH (                          
-   'connector' = 'datagen',        
-   'number-of-rows' = '8'          
+CREATE TABLE foo (
+     c1 INT,
+     c2 STRING
+ ) WITH (
+   'connector' = 'datagen',
+   'number-of-rows' = '8'
  );
 ----
 Let's now add in something more realistic, and understand how we can write data from Flink to a table whose data actually exists somewhere.
@@ -524,7 +524,7 @@ DB_ID               |NAME
 -----------------------------------------------------------------------------------------------------------------------------------------------------
 1                   |default
 2                   |db_rmoff
-ij> 
+ij>
 ----
 `ij` is a bit clunky when it comes to pretty output (e.g.
 rows are very wide and not helpfully formatted based on the width of the data) so let's use link:https://dbeaver.io/[DBeaver]  to speed things up and look at the table we created.
@@ -895,20 +895,20 @@ The Hive metastore—in this case—holds the magical metadata of this relations
 
 [source,sql]
 ----
-ij> SELECT DB."NAME",  
-	       DB.DB_LOCATION_URI,  
-	       TB.TBL_NAME,  
-	       TBP.PARAM_VALUE  
-	FROM   APP.DBS DB  
-	       INNER JOIN APP.TBLS TB  
-	               ON DB.DB_ID = TB.DB_ID  
-	       INNER JOIN APP.TABLE_PARAMS TBP  
-	               ON TB.TBL_ID = TBP.TBL_ID  
+ij> SELECT DB."NAME",
+	       DB.DB_LOCATION_URI,
+	       TB.TBL_NAME,
+	       TBP.PARAM_VALUE
+	FROM   APP.DBS DB
+	       INNER JOIN APP.TBLS TB
+	               ON DB.DB_ID = TB.DB_ID
+	       INNER JOIN APP.TABLE_PARAMS TBP
+	               ON TB.TBL_ID = TBP.TBL_ID
 	WHERE  TBP.PARAM_KEY = 'metadata_location';
 
 NAME    |DB_LOCATION_URI            |TBL_NAME|PARAM_VALUE                                                                                         |
 --------+---------------------------+--------+----------------------------------------------------------------------------------------------------+
-db_rmoff|s3a://warehouse/db_rmoff.db|t_foo   |s3a://warehouse/t_foo/metadata/00000-5946940a-04fa-4a60-9bc9-b83db818560a.metadata.json    
+db_rmoff|s3a://warehouse/db_rmoff.db|t_foo   |s3a://warehouse/t_foo/metadata/00000-5946940a-04fa-4a60-9bc9-b83db818560a.metadata.json
 ----
 
 ==== Flink, Iceberg, and DynamoDB Metastore
@@ -1009,13 +1009,13 @@ Let's go ahead and create the catalog:
 
 [source,sql]
 ----
-CREATE CATALOG c_iceberg_jdbc WITH ( 
-   'type'                 = 'iceberg', 
-   'io-impl'              = 'org.apache.iceberg.aws.s3.S3FileIO', 
-   'warehouse'            = 's3://warehouse', 
-   's3.endpoint'          = 'http://minio:9000', 
-   's3.path-style-access' = 'true', 
-   'catalog-impl'         = 'org.apache.iceberg.jdbc.JdbcCatalog', 
+CREATE CATALOG c_iceberg_jdbc WITH (
+   'type'                 = 'iceberg',
+   'io-impl'              = 'org.apache.iceberg.aws.s3.S3FileIO',
+   'warehouse'            = 's3://warehouse',
+   's3.endpoint'          = 'http://minio:9000',
+   's3.path-style-access' = 'true',
+   'catalog-impl'         = 'org.apache.iceberg.jdbc.JdbcCatalog',
    'uri'                  ='jdbc:postgresql://postgres:5432/?user=dba&password=rules');
 ----
 You know the drill by now—create the database, set it as current, create the table and populate it:
@@ -1073,6 +1073,4 @@ c_iceberg_jdbc  | db01            | t_foo      | s3://warehouse/db01/t_foo/metad
 If you’ve stuck with me this far, well done!
 🙂 My aim was not to put you through the same pain as I had in traversing this, but to summarise the key constants and variables when using the different components and catalogs.
 
-Stay tuned to this blog for my next post which will be a look at some of the troubleshooting techniques that can be useful when exploring Flink SQL.
-
-*Fun fact: if you use Decodable’s fully managed Flink platform you don’t ever have to worry about catalogs—we handle it all for you!*
+Stay tuned to this blog for my link:/2024/02/27/flink-sql-and-the-joy-of-jars/[next] link:/2024/08/06/troubleshooting-flink-sql-s3-problems/[posts] which will be a look at some of the troubleshooting techniques that can be useful when exploring Flink SQL.
