--- a/content/post/cc-flink-api.adoc
+++ b/content/post/cc-flink-api.adoc
@@ -18,7 +18,7 @@ categories:
 
 
 https://www.confluent.io/en-gb/blog/serverless-flink-confluent-cloud-generally-available/[Confluent Cloud for Apache Flink] gives you access to run Flink workloads using a serverless platform on Confluent Cloud.
-After https://rmoff.net/2025/03/13/creating-an-http-source-connector-on-confluent-cloud-from-the-cli/[poking around the Confluent Cloud API for configuring connectors] I wanted to take a look at the same for Flink.
+After link:/2025/03/13/creating-an-http-source-connector-on-confluent-cloud-from-the-cli/[poking around the Confluent Cloud API for configuring connectors] I wanted to take a look at the same for Flink.
 
 Using the API is useful particularly if you want to script a deployment, or automate a bulk operation that might be tiresome to do otherwise.
 It's also handy if you just prefer living in the CLI :)
