--- a/content/post/checkpoint-chronicle-november-2023.adoc
+++ b/content/post/checkpoint-chronicle-november-2023.adoc
@@ -21,7 +21,7 @@ Your hosts and esteemed curators of said content are  link:https://twitter.com/g
 +
 * From the Decodable stables this month we have a useful set of blogs:  +
 • If you’re new to stream processing then  link:https://www.decodable.co/blog/stream-processing-an-overview[this post]  from  link:https://twitter.com/rmetzger_[Robert]  is just what you need to give you an overview of the space. •  link:https://twitter.com/gunnarmorling?lang=en[Gunnar]  then goes on to cover  link:https://www.decodable.co/blog/seven-ways-to-put-cdc-to-work[what change data capture (CDC)  is]  and the wide range of use cases for it.  +
-• To finish off the introductory blog posts, check out  link:https://twitter.com/rmoff/[Robin] ’s view of  link:https://rmoff.net/2023/10/02/learning-apache-flink-s01e02-what-is-flink/[what is Apache Flink]  as he sets out on his learning journey.
+• To finish off the introductory blog posts, check out  link:https://twitter.com/rmoff/[Robin] ’s view of  link:link:/2023/10/02/learning-apache-flink-s01e02-what-is-flink/[what is Apache Flink]  as he sets out on his learning journey.
 +
 +
 
