--- a/content/post/checkpoint-chronicle-october-2024.adoc
+++ b/content/post/checkpoint-chronicle-october-2024.adoc
@@ -44,7 +44,7 @@ Feel free to send our way any choice nuggets that you think we should feature in
 
 === Data Platforms and Architecture
 * A  link:https://medium.com/smartnews-inc/flink-based-iceberg-real-time-data-lake-in-smartnews-part-i-19a7628ce110[couple]  of  link:https://medium.com/smartnews-inc/flink-based-iceberg-real-time-data-lake-in-smartnews-part-2-f3e2bbe9d63e[posts]  from last year by SmartNews detailing a move from batch-based Spark-driven warehouse on Iceberg to a streaming-based Flink-driven warehouse, the reasonings, and detail around Iceberg housekeeping.
-* ngrok is  link:https://rmoff.net/categories/ngrok/[one of my favourite tools to use] , and so I was particularly interested to see  link:https://ngrok.com/blog-post/how-we-built-ngroks-data-platform[this article]  detailing how their data platform is built. The streaming part uses Kafka and Flink, and they hold the data in Iceberg format. There’s also a batch component of their platform which they’ve  link:https://ngrok.com/blog-post/how-ngrok-uses-dagster-to-run-our-data-platform[also written about] .
+* ngrok is  link:link:/categories/ngrok/[one of my favourite tools to use] , and so I was particularly interested to see  link:https://ngrok.com/blog-post/how-we-built-ngroks-data-platform[this article]  detailing how their data platform is built. The streaming part uses Kafka and Flink, and they hold the data in Iceberg format. There’s also a batch component of their platform which they’ve  link:https://ngrok.com/blog-post/how-ngrok-uses-dagster-to-run-our-data-platform[also written about] .
 * Fascinating look at the performance benefits seen by rearchitecting a system to use  link:https://wafris.org/blog/rearchitecting-for-sqlite[SQLite instead of Redis] . I love the kind of performance analysis and thinking that’s gone into this one, particularly since it’s not a like-for-like switch out, but a different way of architecting reads and writes.
 * Discord has become pretty popular in recent years as a chat platform similar to Slack, so you can imagine they have a fair amount of data to deal with. In 2022 they were running 177 Cassandra nodes holding _trillions_ of chat messages.  link:https://discord.com/blog/how-discord-stores-trillions-of-messages[This blog]  details the troubles they had with this, and their eventual migration to ScyllaDB.
 
