--- a/content/post/current-2024-recap.adoc
+++ b/content/post/current-2024-recap.adoc
@@ -16,7 +16,7 @@ Stemming from Kafka Summit originally, it’s broadened to reflect Confluent’s
 <!--more-->
 The Decodable team was there in force this year, with several talks and a bustling booth.
 
-The conference began for me with what is now a regular tradition at Kafka Summit/Current— link:https://rmoff.net/2024/09/02/current-2024-5k-fun-run-or-walk/[the 5k run] .
+The conference began for me with what is now a regular tradition at Kafka Summit/Current— link:link:/2024/09/02/current-2024-5k-fun-run-or-walk/[the 5k run] .
 It’s something that was inspired by a similar community effort at Oracle OpenWorld several years ago, and it’s a fun way to begin the day.
 Fun, that is, if you don’t mind running in the pitch black in 25°C at 90% humidity … 🥵
 
