--- a/content/post/dataeng_dbt_duckdb.adoc
+++ b/content/post/dataeng_dbt_duckdb.adoc
@@ -11,13 +11,13 @@ categories:
 - DuckDB
 ---
 
-I've been wanting to try out dbt for some time now, and a recent long-haul flight seemed like the obvious opportunity to do so. Except many of the tutorials with dbt that I found were based on using Cloud, and airplane WiFi is generally sucky or non-existant. Then I found the https://github.com/dbt-labs/jaffle_shop_duckdb[DuckDB-based demo of dbt], which seemed to fit the bill (🦆 geddit?!) perfectly, since DuckDB runs locally. In addition, https://duckdb.org/[DuckDB] had appeared on my radar recently and I was keen to check it out. 
+I've been wanting to try out dbt for some time now, and a recent long-haul flight seemed like the obvious opportunity to do so. Except many of the tutorials with dbt that I found were based on using Cloud, and airplane WiFi is generally sucky or non-existant. Then I found the https://github.com/dbt-labs/jaffle_shop_duckdb[DuckDB-based demo of dbt], which seemed to fit the bill (🦆 geddit?!) perfectly, since DuckDB runs locally. In addition, https://duckdb.org/[DuckDB] had appeared on my radar recently and I was keen to check it out.
 
 <!--more-->
 
-The https://github.com/dbt-labs/jaffle_shop_duckdb/blob/duckdb/README.md[README] for https://github.com/dbt-labs/jaffle_shop_duckdb[jaffle_shop_duckdb] is comprehensive and well-written. Kudos to the author for providing copy-paste for _all_ the steps needed to get set up including an isolated Python virtual environment. 
+The https://github.com/dbt-labs/jaffle_shop_duckdb/blob/duckdb/README.md[README] for https://github.com/dbt-labs/jaffle_shop_duckdb[jaffle_shop_duckdb] is comprehensive and well-written. Kudos to the author for providing copy-paste for _all_ the steps needed to get set up including an isolated Python virtual environment.
 
-My starting point for this was pretty much zero knowledge of dbt, and I used this opportunity to poke around it and understand it better. I could go and read the https://docs.getdbt.com/[docs] and the https://courses.getdbt.com/[training material], but that'd be too obvious ;) 
+My starting point for this was pretty much zero knowledge of dbt, and I used this opportunity to poke around it and understand it better. I could go and read the https://docs.getdbt.com/[docs] and the https://courses.getdbt.com/[training material], but that'd be too obvious ;)
 
 NOTE: _If you're interested in DuckDB make sure to also check out the noodling around with it that I did link:/2022/10/14/current-22-session-analysis-with-duckdb-and-jupyter-notebook/[in a notebook recently]_.
 
@@ -53,7 +53,7 @@ $ dbt build
 16:29:34  Error sending message, disabling tracking
 ----
 
-That's a lot of things it's just done, with the resulting data loaded into DuckDB. The path of the database file is set in the `profiles.yml` dbt configuration file: 
+That's a lot of things it's just done, with the resulting data loaded into DuckDB. The path of the database file is set in the `profiles.yml` dbt configuration file:
 
 [source,yaml]
 ----
@@ -63,7 +63,7 @@ That's a lot of things it's just done, with the resulting data loaded into DuckD
       path: 'jaffle_shop.duckdb'
 ----
 
-If we check in DuckDB we can see there's data been loaded and transformed in various forms - magic! 
+If we check in DuckDB we can see there's data been loaded and transformed in various forms - magic!
 
 [source,sql]
 ----
@@ -83,22 +83,22 @@ jaffle_shop.duckdb> \dt
 Time: 0.020s
 ----
 
-The source of the data is the CSV 'seed' data in `/seed` - the demo's author notes that this is not an idiomatic way to work with dbt and typically the data will already be in the database. 
+The source of the data is the CSV 'seed' data in `/seed` - the demo's author notes that this is not an idiomatic way to work with dbt and typically the data will already be in the database.
 
-As a side note - make sure to check out https://github.com/dbcli/duckcli[duckcli], which gives DuckDB one of the most beautiful interactive CLI tools out of the box for any database that I've used. 
+As a side note - make sure to check out https://github.com/dbcli/duckcli[duckcli], which gives DuckDB one of the most beautiful interactive CLI tools out of the box for any database that I've used.
 
 image::/images/2022/10/SCR-20221002-ocy.png[DuckDB CLI]
 
 ## Step-by-Step
 
-Whilst the README says very clearly : 
+Whilst the README says very clearly :
 
 > What this repo is not:
 > A tutorial
 
 I'm still wanting to use it to understand a bit about dbt (and DuckDB), so I'm going to https://github.com/dbt-labs/jaffle_shop_duckdb/blob/duckdb/README.md#running-build-steps-independently[run each step at a time] to understand a bit more about what dbt is and what it does. The collection of steps here is what https://docs.getdbt.com/reference/commands/build[`dbt build`] executes automagically for you.
 
-To start with I'll delete the DuckDB database that was created above, and then create a new one (since it doesn't exist when I launch the CLI it'll get created). 
+To start with I'll delete the DuckDB database that was created above, and then create a new one (since it doesn't exist when I launch the CLI it'll get created).
 
 [source,bash]
 ----
@@ -109,7 +109,7 @@ GitHub: https://github.com/dbcli/duckcli
 jaffle_shop.duckdb>
 ----
 
-Confirm that it's empty: 
+Confirm that it's empty:
 
 [source,sql]
 ----
@@ -119,15 +119,15 @@ Time: 0.006s
 
 ### `dbt seed`
 
-Let's do the first bit of the processing (as shown in the `build` output above), which is going to be loading the sample data ('seed' data). I'm not 100% sure of the definition of a *model* at this point but I'm going to guess it's the CSV files. 
+Let's do the first bit of the processing (as shown in the `build` output above), which is going to be loading the sample data ('seed' data). I'm not 100% sure of the definition of a *model* at this point but I'm going to guess it's the CSV files.
 
 [NOTE]
 ====
-The docs are rather good. Instead of just guessing I could look up https://docs.getdbt.com/reference/commands/seed[`dbt seed`] and see that it says: 
+The docs are rather good. Instead of just guessing I could look up https://docs.getdbt.com/reference/commands/seed[`dbt seed`] and see that it says:
 
 > The `dbt seed` command will load `csv` files located in the `seed-paths` directory of your dbt project into your data warehouse.
 
-`seed-paths` is defined in `./dbt_project.yml`: 
+`seed-paths` is defined in `./dbt_project.yml`:
 
 [source,yaml]
 ----
@@ -135,7 +135,7 @@ seed-paths: ["seeds"]
 ----
 ====
 
-The help text says you can use `--models` to specify one or more models. There are three seed files: 
+The help text says you can use `--models` to specify one or more models. There are three seed files:
 
 [source,bash]
 ----
@@ -167,7 +167,7 @@ $ dbt seed --models raw_customers
 16:59:28  Error sending message, disabling tracking
 ----
 
-Note the `INSERT 100`. I'm guessing this is what it says on the tin - that it's inserted 100 rows. Let's check DuckDB: 
+Note the `INSERT 100`. I'm guessing this is what it says on the tin - that it's inserted 100 rows. Let's check DuckDB:
 
 [source,sql]
 ----
@@ -210,7 +210,7 @@ $ head -n1 seeds/raw_customers.csv
 id,first_name,last_name
 ----
 
-I wonder if dbt will overwrite the data that's there if you re-run the `seed` step. Let's muck about with the data and see what happens. 
+I wonder if dbt will overwrite the data that's there if you re-run the `seed` step. Let's muck about with the data and see what happens.
 
 [source,sql]
 ----
@@ -233,7 +233,7 @@ jaffle_shop.duckdb> select last_name,count(*) from raw_customers group by last_n
 Time: 0.011s
 ----
 
-Re-run the seed step: 
+Re-run the seed step:
 
 [source,bash]
 ----
@@ -254,7 +254,7 @@ $ dbt seed --models raw_customers
 17:06:51  Error sending message, disabling tracking
 ----
 
-Check the data: 
+Check the data:
 
 [source,sql]
 ----
@@ -269,7 +269,7 @@ Time: 0.011s
 jaffle_shop.duckdb>
 ----
 
-So it looks like it's not changed. BUT…if we re-launch the DuckDB CLI you'll see something different: 
+So it looks like it's not changed. BUT…if we re-launch the DuckDB CLI you'll see something different:
 
 [source,sql]
 ----
@@ -307,9 +307,9 @@ Time: 0.023s
 jaffle_shop.duckdb>
 ----
 
-So, the CLI queries the state of the DuckDB file as it was on launch, perhaps? But for sure, we can say that the `dbt seed` operation will reset the seed data and fix any changes that have been made. 
+So, the CLI queries the state of the DuckDB file as it was on launch, perhaps? But for sure, we can say that the `dbt seed` operation will reset the seed data and fix any changes that have been made.
 
-Let's run the rest of the seed steps (including the one we've been changing): 
+Let's run the rest of the seed steps (including the one we've been changing):
 
 [source,bash]
 ----
@@ -383,26 +383,26 @@ image::/images/2022/10/SCR-20221011-n9u.png[DuckDB ERD]
 
 '''
 
-The next bit we'll poke at, based on the https://docs.getdbt.com/reference/commands/build[`build`] docs is `dbt run`. 
+The next bit we'll poke at, based on the https://docs.getdbt.com/reference/commands/build[`build`] docs is `dbt run`.
 
-But before we quite get to that, https://docs.getdbt.com/reference/commands/run[the docs] for `dbt run` say in turn: 
+But before we quite get to that, https://docs.getdbt.com/reference/commands/run[the docs] for `dbt run` say in turn:
 
 > `dbt run` executes compiled sql model files against the current `target` database
 
-Which makes me think it would be interesting to first check out https://docs.getdbt.com/reference/commands/compile[`dbt compile`]. 
+Which makes me think it would be interesting to first check out https://docs.getdbt.com/reference/commands/compile[`dbt compile`].
 
-### `dbt compile` 
+### `dbt compile`
 
 > `dbt compile` generates executable SQL from source `model`, `test`, and `analysis` files. You can find these compiled SQL files in the `target/` directory of your dbt project.
 
-I noted that `target/` is in the `.gitignore` so I figure can be deleted (from being created in the  `dbt build` above) and then observed to see the output in each step. 
+I noted that `target/` is in the `.gitignore` so I figure can be deleted (from being created in the  `dbt build` above) and then observed to see the output in each step.
 
 [source,bash]
 ----
 $ rm -rf target
 ----
 
-Whilst there are three source file types described above (`model`, `test`, and `analysis`) I only see `/models` present (the paths, as before, are defined in `dbt_project.yml`): 
+Whilst there are three source file types described above (`model`, `test`, and `analysis`) I only see `/models` present (the paths, as before, are defined in `dbt_project.yml`):
 
 [source,bash]
 ----
@@ -419,7 +419,7 @@ total 40
 drwxr-xr-x  6 rmoff  staff   192 27 Sep 21:33 staging
 ----
 
-Let's compile one of the models. If I take a look at the top of `customers.sql` it's clearly referencing something else: 
+Let's compile one of the models. If I take a look at the top of `customers.sql` it's clearly referencing something else:
 
 [source,sql]
 ----
@@ -432,7 +432,7 @@ with customers as (
 […]
 ----
 
-So where's `stg_customers` defined? In `models/staging/stg_customers.sql`: 
+So where's `stg_customers` defined? In `models/staging/stg_customers.sql`:
 
 [source,sql]
 ----
@@ -460,7 +460,7 @@ renamed as (
 select * from renamed
 ----
 
-So this pulls from the `raw_customers` that was loaded in the seed step and changes a column name (`id` to `customer_id`). Let's `dbt compile` it and see what happens. 
+So this pulls from the `raw_customers` that was loaded in the seed step and changes a column name (`id` to `customer_id`). Let's `dbt compile` it and see what happens.
 
 [source,bash]
 ----
@@ -474,7 +474,7 @@ $ dbt compile --model models/staging/stg_customers.sql
 16:14:54  Done.
 ----
 
-If we head over to `target/` (which we removed before the compile, so whatever we see was created by this step) we see a bunch of new content: 
+If we head over to `target/` (which we removed before the compile, so whatever we see was created by this step) we see a bunch of new content:
 
 [source,bash]
 ----
@@ -509,7 +509,7 @@ total 16
 -rw-r--r--  1 rmoff  staff  187 11 Oct 17:14 unique_stg_customers_customer_id.sql
 ----
 
-If we look at the compiled version of the `compiled/jaffle_shop/models/staging/stg_customers.sql` model that we saw above you'll see the reference is now resolved, with the rest of the file remaining the same: 
+If we look at the compiled version of the `compiled/jaffle_shop/models/staging/stg_customers.sql` model that we saw above you'll see the reference is now resolved, with the rest of the file remaining the same:
 
 [source,sql]
 ----
@@ -542,7 +542,7 @@ total 16
 -rw-r--r--  1 rmoff  staff  187 11 Oct 17:14 unique_stg_customers_customer_id.sql
 ----
 
-These two SQL files look like they're to check two different constraints (NOT NULL and uniqueness): 
+These two SQL files look like they're to check two different constraints (NOT NULL and uniqueness):
 
 [source,sql]
 ----
@@ -563,7 +563,7 @@ from "main"."main"."stg_customers"
 where customer_id is not null
 ----
 
-But where are these constraints defined? It's not in the `staging/stg_customers.sql` because we saw that above and there was no DDL there. Instead the clue is in the name of the folder - `staging/schema.yml`. If we head back to the `models` folder and look at `staging/schema.yml` we'll see the constraints defined in YAML: 
+But where are these constraints defined? It's not in the `staging/stg_customers.sql` because we saw that above and there was no DDL there. Instead the clue is in the name of the folder - `staging/schema.yml`. If we head back to the `models` folder and look at `staging/schema.yml` we'll see the constraints defined in YAML:
 
 [source,yaml]
 ----
@@ -580,7 +580,7 @@ models:
 […]
 ----
 
-So this is starting to come together (_it would still be easier to learn if I just read the docs instead of reverse engineering this stuff…but that's how I learn by poking things and see what yelps 🤷‍♂️_): the `schema.yml` defines the names of the objects in a schema folder (my assumption is that `staging` is seen as a schema, and the parent folder under `models` another schema), and then the `.sql` files in that folder define the objects themselves and their derivations from their source. The source is referenced and resolved and compilation time. 
+So this is starting to come together (_it would still be easier to learn if I just read the docs instead of reverse engineering this stuff…but that's how I learn by poking things and see what yelps 🤷‍♂️_): the `schema.yml` defines the names of the objects in a schema folder (my assumption is that `staging` is seen as a schema, and the parent folder under `models` another schema), and then the `.sql` files in that folder define the objects themselves and their derivations from their source. The source is referenced and resolved and compilation time.
 
 The only other files under `target/` at this point look like runtime info, metadata, and other such stuff. For example, here's `run_results.json`:
 
@@ -609,7 +609,7 @@ $ jq '.' target/run_results.json
 
 ### `dbt run`
 
-Having poked around what goes on during compilation, let's look at https://docs.getdbt.com/reference/commands/run[`dbt run`]. Before I do that I'll just double-check the state of the database first: 
+Having poked around what goes on during compilation, let's look at https://docs.getdbt.com/reference/commands/run[`dbt run`]. Before I do that I'll just double-check the state of the database first:
 
 [source,bash]
 ----
@@ -623,14 +623,14 @@ $ duckdb jaffle_shop.duckdb -c show
 └───────────────┴────────────────────────────────────────┴──────────────────────────────────────┴───────────┘
 ----
 
-Only the seed tables are there, as we'd expect (from the `dbt seed` step; the `dbt compile` doesn't execute any data movement). Now we `run` - I'm going to run it just for one of the models (`customers`) to start with: 
+Only the seed tables are there, as we'd expect (from the `dbt seed` step; the `dbt compile` doesn't execute any data movement). Now we `run` - I'm going to run it just for one of the models (`customers`) to start with:
 
 [source,bash]
 ----
 dbt run --models raw_customers
 ----
 
-The response to doing something daft (running the `raw_customers` model, instead of `customers`) is pleasingly forgiving (`[WARNING]: Nothing to do`) and informative (`Try checking your model configs and model specification args`): 
+The response to doing something daft (running the `raw_customers` model, instead of `customers`) is pleasingly forgiving (`[WARNING]: Nothing to do`) and informative (`Try checking your model configs and model specification args`):
 
 [source,bash]
 ----
@@ -641,7 +641,7 @@ $ dbt run --models raw_customers
 09:39:14  [WARNING]: Nothing to do. Try checking your model configs and model specification args
 ----
 
-Let's try the correct one: 
+Let's try the correct one:
 
 [source,bash]
 ----
@@ -665,9 +665,9 @@ $ dbt run --models customers
 09:41:00  Done. PASS=0 WARN=0 ERROR=1 SKIP=0 TOTAL=1
 ----
 
-Agh, still not quite there. There's probably a reason the docs exist. 
+Agh, still not quite there. There's probably a reason the docs exist.
 
-`Table with name stg_customers does not exist` tells us that `stg_customers` is needed first, so let's cross our fingers for third-time-lucky: 
+`Table with name stg_customers does not exist` tells us that `stg_customers` is needed first, so let's cross our fingers for third-time-lucky:
 
 [source,bash]
 ----
@@ -691,7 +691,7 @@ $ dbt run --models stg_customers
 
 It's almost like flailing around without reading the docs can be productive 🤔
 
-If we look at what's changed in the local folder we can see a few interesting things: 
+If we look at what's changed in the local folder we can see a few interesting things:
 
 [source,bash]
 ----
@@ -736,7 +736,7 @@ select * from renamed
   );
 ----
 
-You'll notice here that we've actually got some DML: `create view … as`. Other than that, the `run` version of the SQL is the same as the `compile` version. If we head over to DuckDB we can see there's now a view which performs the described transformation (rename `id` to `customer_id`): 
+You'll notice here that we've actually got some DML: `create view … as`. Other than that, the `run` version of the SQL is the same as the `compile` version. If we head over to DuckDB we can see there's now a view which performs the described transformation (rename `id` to `customer_id`):
 
 [source,sql]
 ----
@@ -795,7 +795,7 @@ Now I'll run the other two staging tables which will also create views. The `stg
         […]
 ----
 
-Whereas before I used the name of the model, https://docs.getdbt.com/reference/node-selection/syntax#examples[per the docs] you can also specify a folder of models (`--models staging`). 
+Whereas before I used the name of the model, https://docs.getdbt.com/reference/node-selection/syntax#examples[per the docs] you can also specify a folder of models (`--models staging`).
 
 NOTE: `--models` is deprecated in favour of `--select`
 
@@ -838,7 +838,7 @@ $ duckdb jaffle_shop.duckdb -c "select table_name, table_type from information_s
 └───────────────┴────────────┘
 ----
 
-So that's staging run. dbt creates views here because that's the https://docs.getdbt.com/docs/build/materializations[materialization config] that's specified in the `dbt_project.yml`: 
+So that's staging run. dbt creates views here because that's the https://docs.getdbt.com/docs/build/materializations[materialization config] that's specified in the `dbt_project.yml`:
 
 [source,yaml]
 ----
@@ -850,18 +850,18 @@ models:
         materialized: view
 ----
 
-Let's now take a look at the main models that build tables from staging. 
+Let's now take a look at the main models that build tables from staging.
 
 #### The Main Models: `customers.sql`
 
-Looking at https://github.com/dbt-labs/jaffle_shop_duckdb/blob/duckdb/models/customers.sql[this model's SQL] you can see that calculates several aggregates by customer: 
+Looking at https://github.com/dbt-labs/jaffle_shop_duckdb/blob/duckdb/models/customers.sql[this model's SQL] you can see that calculates several aggregates by customer:
 
 * From **order data** (earliest & most recent order date, number of orders)
 * From **payment data** (total amount paid)
 
-and builds a table of all customers with order and payment data where it exists (`LEFT JOIN`). 
+and builds a table of all customers with order and payment data where it exists (`LEFT JOIN`).
 
-Let's run it. 
+Let's run it.
 
 [source,bash]
 ----
@@ -881,7 +881,7 @@ $ dbt run --select customers
 13:39:39  Done. PASS=1 WARN=0 ERROR=0 SKIP=0 TOTAL=1
 ----
 
-over in DuckDB we have a nice `customers` table populated for us: 
+over in DuckDB we have a nice `customers` table populated for us:
 
 [source,sql]
 ----
@@ -964,7 +964,7 @@ sum(case when payment_method = '{{payment_method}}' then amount end) as {{paymen
 {% endfor %}
 ----
 
-to generate the desired SQL: 
+to generate the desired SQL:
 
 [source,sql]
 ----
@@ -973,7 +973,7 @@ sum(case when payment_method = 'credit_card' then amount end) as credit_card_amo
 sum(case when payment_method = 'gift_card' then amount end) as gift_card_amount,
 ----
 
-This is pretty smart. We _could_ just write the SQL directly itself, but what happens when we start taking cheques and cryptocurrencies for payment? We either end up copy-and-pasting and search & replace on this line twice: 
+This is pretty smart. We _could_ just write the SQL directly itself, but what happens when we start taking cheques and cryptocurrencies for payment? We either end up copy-and-pasting and search & replace on this line twice:
 
 [source,sql]
 ----
@@ -981,7 +981,7 @@ sum(case when payment_method = 'cheque' then amount end) as cheque_amount,
 sum(case when payment_method = 'crypto' then amount end) as crypto_amount,
 ----
 
-which is fiddly and error prone. In addition if you look further down the model's SQL you can see that the variable is used again: 
+which is fiddly and error prone. In addition if you look further down the model's SQL you can see that the variable is used again:
 
 [source,sql]
 ----
@@ -990,22 +990,22 @@ which is fiddly and error prone. In addition if you look further down the model'
 {% endfor -%}
 ----
 
-So now your chances of making errors is even more so because you need to work out all the places in the SQL has appeared, and no way of telling which fields need replicating without knowing the code logic closely. 
+So now your chances of making errors is even more so because you need to work out all the places in the SQL has appeared, and no way of telling which fields need replicating without knowing the code logic closely.
 
-Alternatively, we just add them once to the nicely obvious and declared enum: 
+Alternatively, we just add them once to the nicely obvious and declared enum:
 
 [source,sql]
 ----
 {% set payment_methods = ['cheque','crypto','credit_card', 'coupon', 'bank_transfer', 'gift_card'] %}
 ----
 
-Pretty smart huh. 
+Pretty smart huh.
 
 ++++
 <div class="tenor-gif-embed" data-postid="16733420" data-share-method="host" data-aspect-ratio="1.40351" data-width="100%"><a href="https://tenor.com/view/thumbs-up-friends-approve-gif-16733420">Thumbs Up Friends GIF</a>from <a href="https://tenor.com/search/thumbs+up-gifs">Thumbs Up GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 ++++
 
-This is where `dbt compile` comes into its own too. It was useful above to understand a bit more about the flow of things, but here it's going to let us take the model and check how the Jinja will resolve into SQL: 
+This is where `dbt compile` comes into its own too. It was useful above to understand a bit more about the flow of things, but here it's going to let us take the model and check how the Jinja will resolve into SQL:
 
 [source,bash]
 ----
@@ -1051,11 +1051,11 @@ order_payments as (
 […]
 ----
 
-There's a nice https://docs.getdbt.com/docs/build/jinja-macros#dbtonic-jinja[note in the docs] about a _dbtonic_ approach to the use of Jinja (_this is nothing to do with Gin, but a nice nod to the_ pythonic _concept_) which is worth a read including strong advice to +++<del>+++not be a smartarse+++</del>+++ https://docs.getdbt.com/docs/build/jinja-macros#favor-readability-over--ness[favour readability over DRY-ness]. 
+There's a nice https://docs.getdbt.com/docs/build/jinja-macros#dbtonic-jinja[note in the docs] about a _dbtonic_ approach to the use of Jinja (_this is nothing to do with Gin, but a nice nod to the_ pythonic _concept_) which is worth a read including strong advice to +++<del>+++not be a smartarse+++</del>+++ https://docs.getdbt.com/docs/build/jinja-macros#favor-readability-over--ness[favour readability over DRY-ness].
 
-### `dbt run` 
+### `dbt run`
 
-Now that we've understood how all of this works, let's run it all: 
+Now that we've understood how all of this works, let's run it all:
 
 [source,bash]
 ----
@@ -1099,11 +1099,11 @@ $ duckdb jaffle_shop.duckdb -c "select table_name, table_type from information_s
 
 ## Wrapping up…
 
-So that was fun. Slightly back-to-front, but fun nonetheless. 
+So that was fun. Slightly back-to-front, but fun nonetheless.
 
-dbt gives us a nice way to use SQL to declare the transformations that we'd like to do on our data. It's predicated on your data being in place already -- https://rmoff.net/2022/10/02/data-engineering-in-2022-architectures-terminology/[it's the T of the ELT/ETL process].
+dbt gives us a nice way to use SQL to declare the transformations that we'd like to do on our data. It's predicated on your data being in place already -- link:/2022/10/02/data-engineering-in-2022-architectures-terminology/[it's the T of the ELT/ETL process].
 
-With dozens of https://docs.getdbt.com/docs/supported-data-platforms[adaptors] you can use the same build platform but with different targets. I can see the appeal of this massively both as a way early in a project to evaluate different data stores side-by-side, as well as later on in a project as technology perhaps evolves to the point that you want to move your workload elsewhere. 
+With dozens of https://docs.getdbt.com/docs/supported-data-platforms[adaptors] you can use the same build platform but with different targets. I can see the appeal of this massively both as a way early in a project to evaluate different data stores side-by-side, as well as later on in a project as technology perhaps evolves to the point that you want to move your workload elsewhere.
 
 ## Learning More
 
