--- a/content/post/dataeng_metrics.adoc
+++ b/content/post/dataeng_metrics.adoc
@@ -1,17 +1,17 @@
 As I explore the current world of data & analytics engineering, one of the things I'm trying to grok is the idea of a Metric Layer (described by Drew Banin
 
-in this keynote: https://www.youtube.com/watch?v=MdSMSbQxnO0 and Benn Stancil here https://benn.substack.com/p/metrics-layer). 
+in this keynote: https://www.youtube.com/watch?v=MdSMSbQxnO0 and Benn Stancil here https://benn.substack.com/p/metrics-layer).
 
 
 
-It strikes me as conceptually similar to what #OBIEE did in its logical layer with measures. Admittedly it was almost always exposed through the tool's front end itself, but there *was* an ODBC and JDBC (https://rmoff.net/2016/03/28/connecting-to-obiee-via-jdbc-with-jisql/) API that other tools could have built against. 
+It strikes me as conceptually similar to what #OBIEE did in its logical layer with measures. Admittedly it was almost always exposed through the tool's front end itself, but there *was* an ODBC and JDBC (link:/2016/03/28/connecting-to-obiee-via-jdbc-with-jisql/) API that other tools could have built against.
 
 
 
-Standardising definitions across a business has been—and always will be—a challenge, so some kind of centralised point of serving like this makes sense. What'll be interesting is if the maturity that's come in the data space in recent years around engineering principles like source control and testing will still hold here, or if the forcing-function of JFDI will end up bulldozing the quest for a single clean definition of a metric. 
+Standardising definitions across a business has been—and always will be—a challenge, so some kind of centralised point of serving like this makes sense. What'll be interesting is if the maturity that's come in the data space in recent years around engineering principles like source control and testing will still hold here, or if the forcing-function of JFDI will end up bulldozing the quest for a single clean definition of a metric.
 
 
 
 
 
-#dataengineering #analyticsengineering 
+#dataengineering #analyticsengineering
