--- a/content/post/exploring-the-flink-sql-gateway-rest-api.adoc
+++ b/content/post/exploring-the-flink-sql-gateway-rest-api.adoc
@@ -11,7 +11,7 @@ image: "/images/2024/03/rest01.jpg"
 NOTE: This post originally appeared on the link:https://www.decodable.co/blog/exploring-the-flink-sql-gateway-rest-api[Decodable blog].
 
 The link:https://nightlies.apache.org/flink/flink-docs-master/docs/dev/table/sql-gateway/overview/[SQL Gateway in Apache Flink]  provides a way to run SQL in Flink from places other than the SQL Client.
-This includes using a link:https://rmoff.net/2023/11/16/learning-apache-flink-s01e06-the-flink-jdbc-driver/[JDBC Driver]  (which opens up a multitude of clients), a Hive client via the link:https://nightlies.apache.org/flink/flink-docs-master/docs/dev/table/sql-gateway/hiveserver2/[HiveServer2 endpoint] , and directly against the link:https://nightlies.apache.org/flink/flink-docs-master/docs/dev/table/sql-gateway/rest/[REST Endpoint] .
+This includes using a link:link:/2023/11/16/learning-apache-flink-s01e06-the-flink-jdbc-driver/[JDBC Driver]  (which opens up a multitude of clients), a Hive client via the link:https://nightlies.apache.org/flink/flink-docs-master/docs/dev/table/sql-gateway/hiveserver2/[HiveServer2 endpoint] , and directly against the link:https://nightlies.apache.org/flink/flink-docs-master/docs/dev/table/sql-gateway/rest/[REST Endpoint] .
 
 <!--more-->
 As I continue my journey with learning Flink SQL one thing I wondered was how one would go about submitting a Flink SQL job in a Production scenario.
@@ -378,21 +378,21 @@ do
 done
 
 echo "\n\n----- 📃 RESULTS 📃 -----\n"
-URL='/sessions/'$SESSIONHANDLE'/operations/'$OPERATIONHANDLE'/result/0?rowFormat=JSON' 
+URL='/sessions/'$SESSIONHANDLE'/operations/'$OPERATIONHANDLE'/result/0?rowFormat=JSON'
 while [ 1 -eq 1 ]
 do
   RESULT=$(http --follow --timeout 3600 GET $host$URL \
    Accept:'application/json')
   echo $RESULT | jq '.'
-  URL=$(echo $RESULT | jq -r '.nextResultUri // ""') 
+  URL=$(echo $RESULT | jq -r '.nextResultUri // ""')
   if [ -z $URL ]; then
-    break 
+    break
   fi
   echo "(next result chunk 👇)"
 done
 
 echo "Closing session 🗑️"
-http --follow --timeout 3600 DELETE $host'/sessions/'$SESSIONHANDLE 
+http --follow --timeout 3600 DELETE $host'/sessions/'$SESSIONHANDLE
 ----
 We'll put the actual SQL into a file called `rmoff.sql`:
 
