--- a/content/post/il-2025-03.adoc
+++ b/content/post/il-2025-03.adoc
@@ -18,15 +18,17 @@ _The problem with publishing link:/2025/02/03/interesting-links-february-2025/[F
 
 <!--more-->
 
+TIP: Medium posts often skulk behind a gate, so I've hyperlinked to the Freedium version and included a link to the original using a ⓜ️ icon should you prefer to visit that (or if freedium goes offline).
+
 == DuckDB
 
 * I've been using DuckDB a lot recently and wrote up a few articles:
-** https://rmoff.net/2025/03/20/building-a-data-pipeline-with-duckdb/[Building a Data Pipeline with DuckDB]
-** https://rmoff.net/2025/02/27/duckdb-tricks-renaming-fields-in-a-select-across-tables/[DuckDB Tricks: Renaming Fields in a SELECT * across tables]
-** https://rmoff.net/2025/02/28/exploring-uk-environment-agency-data-in-duckdb-and-rill/[Exploring UK Environment Agency Data in DuckDB and Rill]
+** link:/2025/03/20/building-a-data-pipeline-with-duckdb/[Building a Data Pipeline with DuckDB]
+** link:/2025/02/27/duckdb-tricks-renaming-fields-in-a-select-across-tables/[DuckDB Tricks: Renaming Fields in a SELECT * across tables]
+** link:/2025/02/28/exploring-uk-environment-agency-data-in-duckdb-and-rill/[Exploring UK Environment Agency Data in DuckDB and Rill]
 * The https://duckdb.org/2025/03/12/duckdb-ui.html[release of a built-in UI] got the DuckDB community a flappin' and quackin'. I wrote two blog posts about it:
-** https://rmoff.net/2025/03/14/kicking-the-tyres-on-the-new-duckdb-ui/[Kicking the Tyres on the New DuckDB UI]
-** https://rmoff.net/2025/03/19/exporting-notebooks-from-duckdb-ui/[Exporting Notebooks from DuckDB UI]
+** link:/2025/03/14/kicking-the-tyres-on-the-new-duckdb-ui/[Kicking the Tyres on the New DuckDB UI]
+** link:/2025/03/19/exporting-notebooks-from-duckdb-ui/[Exporting Notebooks from DuckDB UI]
 * DuckDB also https://duckdb.org/2025/03/14/preview-amazon-s3-tables.html[added support] for reading from https://aws.amazon.com/s3/features/tables/[Amazon S3 Tables] (Amazon's managed Apache Iceberg offering).
 * Tobias Müller has started a https://learningduckdb.com/newsletters/welcome-to-learning-duckdb/[Learning DuckDB newsletter]
 * DeepSeek released https://github.com/deepseek-ai/smallpond[smallpond], a distributed DuckDB implementation that uses https://github.com/deepseek-ai/3FS[3FS] (also from Deepseek) and https://www.ray.io/[Ray]. https://www.definite.app/blog/smallpond[This blog post] gives a nice overview and assessment of it—including the summary "_Is smallpond for me? tl;dr: probably not_" :) Daniel Beach also https://dataengineeringcentral.substack.com/p/smallpond-distributed-duckdb[takes a look at it] with some code examples.
@@ -59,15 +61,15 @@ _The problem with publishing link:/2025/02/03/interesting-links-february-2025/[F
 * Flink and AI is a recurring theme, including in the recent Flink 2.0 release. This post gives an example of https://ganxesh.medium.com/integrating-llms-into-apache-flink-pipelines-8fb433743761[using LLMs with Flink].
 * https://kstd.thriving.dev/[Kafka Streams Topology Design (KSTD)] released a https://github.com/thriving-dev/kafka-streams-topology-design/releases/tag/v1.0.0-beta.3[new version].
 * I've been learning more about Flink SQL, and wrote three articles:
-** https://rmoff.net/2025/03/10/data-wrangling-with-flink-sql/[Data Wrangling with Flink SQL]
-** https://rmoff.net/2025/03/06/joining-two-streams-of-data-with-flink-sql/[Joining Two Streams of Data with Flink SQL]
-** https://rmoff.net/2025/03/03/how-to-explode-nested-arrays-with-flink-sql/[How to Explode Nested Arrays with Flink SQL]
+** link:/2025/03/10/data-wrangling-with-flink-sql/[Data Wrangling with Flink SQL]
+** link:/2025/03/06/joining-two-streams-of-data-with-flink-sql/[Joining Two Streams of Data with Flink SQL]
+** link:/2025/03/03/how-to-explode-nested-arrays-with-flink-sql/[How to Explode Nested Arrays with Flink SQL]
 
 == General Data Stuff
 
 * https://www.theregister.com/2025/02/11/microsoft_postgresql_extensions/[Analysis from El Reg] on https://opensource.microsoft.com/blog/2025/01/23/documentdb-open-source-announcement/[Microsoft's releasing] `pg_documentdb_api` and `pg_documentdb_core` Postgres extensions as open source.
 * Tons of fascinating detail in https://www.interdb.jp/pg/index.html[The Internals of PostgreSQL].
-* I wrote about https://rmoff.net/2025/03/13/creating-an-http-source-connector-on-confluent-cloud-from-the-cli/[Creating an HTTP Source connector on Confluent Cloud from the CLI].
+* I wrote about link:/2025/03/13/creating-an-http-source-connector-on-confluent-cloud-from-the-cli/[Creating an HTTP Source connector on Confluent Cloud from the CLI].
 * A nifty https://debezium.io/blog/2025/02/01/real-time-data-replication-with-debezium-and-python/[blog post] about using https://github.com/memiiso/pydbzengine[`pydbzengine`] to interact with Debezium from Python, building out a CDC pipeline.
 * Debezium recently https://debezium.io/blog/2025/02/24/go-smt/[added support for SMTs written in Go].
 * https://debezium.io/blog/2025/03/13/debezium-3-1-beta1-released/[Debezium 3.1.0.Beta1] includes the first release of https://github.com/debezium/debezium-platform/blob/main/helm/README.md[Debezium Platform], which is designed to make it easier running Debezium on Kubernetes.
