--- a/content/post/il-2025-04.adoc
+++ b/content/post/il-2025-04.adoc
@@ -13,6 +13,8 @@ categories:
 
 <!--more-->
 
+TIP: Medium posts often skulk behind a gate, so I've hyperlinked to the Freedium version and included a link to the original using a ⓜ️ icon should you prefer to visit that (or if freedium goes offline).
+
 == Data Engineering
 * 🔥 https://luminousmen.com/post/data-engineering-now-with-30-more-bullshit[Data Engineering: Now with 30% More Bullshit]
 * 🔥 A good article from Andrew Jones on the https://www.confluent.io/blog/shifting-left/[concept of "shift left"]
@@ -86,4 +88,4 @@ _Nothing to do with data, but stuff that I've found interesting or has made me s
 
 ---
 
-TIP: If you like these kind of links you might like to read about https://rmoff.net/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
+TIP: If you like these kind of links you might like to read about link:/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
