--- a/content/post/il-2025-05.adoc
+++ b/content/post/il-2025-05.adoc
@@ -13,6 +13,8 @@ _Not got time for all this? I've marked 🔥 for my top reads of the month_ :)
 
 <!--more-->
 
+TIP: Medium posts often skulk behind a gate, so I've hyperlinked to the Freedium version and included a link to the original using a ⓜ️ icon should you prefer to visit that (or if freedium goes offline).
+
 == Data Engineering
 
 * 🔥 Amongst all the background noise of _ETL vs ELT vs ZeroETL_, https://seattledataguy.substack.com/p/understanding-the-t-in-etl-a-back[this primer from Ben Rogojan] (a.k.a. "The Seattle Data Guy") is a great reminder of the actual 'T' that needs doing to our data, wherever it is that we do it.
@@ -83,4 +85,4 @@ _Nothing to do with data, but stuff that I've found interesting or has made me s
 
 ---
 
-TIP: If you like these kind of links you might like to read about https://rmoff.net/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
+TIP: If you like these kind of links you might like to read about link:/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
