--- a/content/post/il-2025-06.adoc
+++ b/content/post/il-2025-06.adoc
@@ -13,11 +13,13 @@ _Not got time for all this? I've marked 🔥 for my top reads of the month_ :)
 
 <!--more-->
 
+TIP: Medium posts often skulk behind a gate, so I've hyperlinked to the Freedium version and included a link to the original using a ⓜ️ icon should you prefer to visit that (or if freedium goes offline).
+
 == Open Table Formats / Data Lakehouses
 
 * 🔥 Instead of enthusiastically hopping on the Iceberg bandwagon with both webbed feet, DuckDB Labs have been quietly building their own format.
 https://ducklake.select/[DuckLake] was https://ducklake.select/manifesto/[announced] at the beginning of the month, and is a replacement for _both_ an OTF such as Iceberg _and_ the metadata catalog that an OTF user will invariably need to wire up too.
-I had a https://rmoff.net/2025/06/02/digging-into-ducklake/[quick poke around it], and https://tobilg.com/the-age-of-10-dollar-a-month-lakehouses[Tobias Müller] and https://medium.com/@mcgeehan/quacks-stacks-5565069a5ef0[Thomas F McGeehan V] both went into it in more detail, along with https://motherduck.com/blog/ducklake-motherduck/[MotherDuck] who'll unsurprisingly be offering it as a managed service.
+I had a link:/2025/06/02/digging-into-ducklake/[quick poke around it], and https://tobilg.com/the-age-of-10-dollar-a-month-lakehouses[Tobias Müller] and https://medium.com/@mcgeehan/quacks-stacks-5565069a5ef0[Thomas F McGeehan V] both went into it in more detail, along with https://motherduck.com/blog/ducklake-motherduck/[MotherDuck] who'll unsurprisingly be offering it as a managed service.
 
 * The catalog space is a vital one for OTFs, and there are various projects springing up alongside the more established Unity and Polaris catalogs.
 Some do slightly different things (such as management e.g. compaction) or have a broader ambition (cataloging _all_ your data, not just OTF):
@@ -25,7 +27,7 @@ Some do slightly different things (such as management e.g. compaction) or have a
 ** https://github.com/nimtable/nimtable[nimtable] (from RisingWave)
 ** https://github.com/apache/gravitino[apache/gravitino]
 
-* I've written about writing to Iceberg from Kafka with Flink https://www.decodable.co/blog/kafka-to-iceberg-with-flink[before], but shipped https://rmoff.net/2025/06/24/writing-to-apache-iceberg-on-s3-using-flink-sql-with-glue-catalog/[a new blog this week] that throws AWS Glue Data Catalog into the mix.
+* I've written about writing to Iceberg from Kafka with Flink https://www.decodable.co/blog/kafka-to-iceberg-with-flink[before], but shipped link:/2025/06/24/writing-to-apache-iceberg-on-s3-using-flink-sql-with-glue-catalog/[a new blog this week] that throws AWS Glue Data Catalog into the mix.
 * Details of the latest Iceberg version https://www.databricks.com/blog/iceberg-v3-moving-ecosystem-towards-unification[Iceberg v3: Moving the Ecosystem Towards Unification]
 * In a blog post that makes me nostalgic for link:/2010/12/30/data-warehousing-and-statistics-in-oracle-11g-incremental-global-statistics/[my Oracle days], Yuval Yogev writes about https://medium.com/@yogevyuval/making-sense-of-apache-iceberg-statistics-5a114d8e90d1[statistics in Iceberg]
 * Some useful points to think about from Jacek Migdal covering where https://quesma.com/blog-detail/apache-iceberg-practical-limitations-2025[Iceberg might not be the right fit for your requirements]
@@ -127,4 +129,4 @@ _Nothing to do with data, but stuff that I've found interesting or has made me s
 
 ---
 
-TIP: If you like these kind of links you might like to read about https://rmoff.net/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
+TIP: If you like these kind of links you might like to read about link:/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
