--- a/content/post/il-2025-08.adoc
+++ b/content/post/il-2025-08.adoc
@@ -13,7 +13,9 @@ _Not got time for all this? I've marked 🔥 for my top reads of the month_ :)
 
 <!--more-->
 
-TIP: You can find previous editions of _Interesting Links_ link:/categories/interesting-links/[here].
+You can find previous editions of _Interesting Links_ link:/categories/interesting-links/[here].
+
+TIP: Medium posts often skulk behind a gate, so I've hyperlinked to the Freedium version and included a link to the original using a ⓜ️ icon should you prefer to visit that (or if freedium goes offline).
 
 == Data Engineering
 * 🔥 Ben Rogojan (a.k.a. SeattleDataGuy) has a great list of https://seattledataguy.substack.com/p/5-things-in-data-engineering-that[5 Things in Data Engineering That Still Hold True After 10 Years] (_guess what: data modelling matters, if you start with crap data you'll end with crap data, and so on…_).
@@ -48,7 +50,7 @@ TIP: You can find previous editions of _Interesting Links_ link:/categories/inte
 
 _Let's be honest, it's mostly just Apache Iceberg…_😅
 
-* 🔥 I spent some time looking into Flink vs Kafka Connect vs Tableflow for getting data into Iceberg, and wrote up some of the comparison points: https://rmoff.net/2025/08/18/kafka-to-iceberg-exploring-the-options/[Kafka to Iceberg - Exploring the Options]
+* 🔥 I spent some time looking into Flink vs Kafka Connect vs Tableflow for getting data into Iceberg, and wrote up some of the comparison points: link:/2025/08/18/kafka-to-iceberg-exploring-the-options/[Kafka to Iceberg - Exploring the Options]
 * Aiven published https://github.com/Aiven-Open/tiered-storage-for-apache-kafka/blob/main/iceberg_whitepaper.md[a whitepaper] with details of their plans for writing to Iceberg directly from Kafka
 * David Reger published a https://blog.msgdataplatform.com/from-kafka-topics-to-iceberg-with-confluent-tableflow-5708e02d0d0a[detailed writeup] of Tableflow (Confluent's tool for getting data from Kafka to Iceberg).
 * A while back https://lakefs.io/blog/data-engineering-patterns-write-audit-publish/[I wrote about] the Write-Audit-Publish pattern, and so enjoyed reading these two blog posts from Turóczy Attila about https://medium.com/@aturoczy/elegant-etl-with-apache-iceberg-branching-489a3bb89a41[branching] and https://medium.com/@aturoczy/tagging-in-apache-iceberg-fdb7a19c0bf2[tagging] in Apache Iceberg.
@@ -103,6 +105,6 @@ _Nothing to do with data, but stuff that I've found interesting or has made me s
 
 [NOTE]
 ====
-* If you like these kind of links you might like to read about https://rmoff.net/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
+* If you like these kind of links you might like to read about link:/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
 * If you have trouble accessing Medium posts, try using https://scribe.rip/[`scribe.rip`].
 ====
