--- a/content/post/il-2025-09.adoc
+++ b/content/post/il-2025-09.adoc
@@ -21,6 +21,8 @@ _Not got time for all this? I've marked 🔥 for my top reads of the month_ :)
 
 <!--more-->
 
+TIP: Medium posts often skulk behind a gate, so I've hyperlinked to the Freedium version and included a link to the original using a ⓜ️ icon should you prefer to visit that (or if freedium goes offline).
+
 == Data Engineering and Architecture
 
 * Some blog posts don't need to be long.
@@ -176,6 +178,6 @@ _Nothing to do with data, but stuff that I've found interesting or has made me s
 
 [NOTE]
 ====
-* If you like these kind of links you might like to read about https://rmoff.net/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
+* If you like these kind of links you might like to read about link:/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
 * If you have trouble accessing Medium posts, try using https://scribe.rip/[`scribe.rip`].
 ====
