--- a/content/post/il-2025-11.adoc
+++ b/content/post/il-2025-11.adoc
@@ -70,6 +70,8 @@ And if you're a speaker, check out the excellent article titled https://samharri
 
 _Not got time for all this? I've marked 🔥 for my top reads of the month_ :)
 
+TIP: Medium posts often skulk behind a gate, so I've hyperlinked to the Freedium version and included a link to the original using a ⓜ️ icon should you prefer to visit that (or if freedium goes offline).
+
 == Kafka and Event Streaming
 * A trio of articles from Zeinab Dashti about exactly-once processing in Kafka, using the https://medium.com/threadsafe/exactly-once-processing-across-kafka-and-databases-using-kafka-transactions-idempotent-writes-09fe1f75bdab[Transactions], the https://medium.com/threadsafe/exactly-once-processing-across-kafka-and-databases-using-the-outbox-pattern-f08fd640f683[Outbox Pattern], and the https://medium.com/threadsafe/exactly-once-processing-across-kafka-and-databases-using-the-listen-to-yourself-pattern-0add785f988a[Listen-to-Yourself Pattern]
 * A nice post from Stefan Kecskes exploring https://skey.uk/post/kraft-the-kafka-raft/[what KRaft is and what the migration process looks like].
@@ -96,7 +98,7 @@ The https://medium.com/@katyagorshkova/hands-on-with-flink-part-2-running-on-kub
 * Konstantinos Karavitis has an interesting post about the design pattern known as https://www.linkedin.com/pulse/applying-hexagonal-architecture-apache-flink-konstantinos-karavitis-zx6zf/["hexagonal architecture"] and its application when https://medium.com/@kkaravitis/pricing-advisor-a-practical-architecture-for-real-time-dynamic-pricing-poc-1ab1d3dc0afa[building microservices with Flink].
 * A https://blog.dataengineerthings.org/delta-join-what-even-is-that-b8306c36f1ac[summary] from Jennifer Ebe about Delta Joins, introduced into Flink in https://cwiki.apache.org/confluence/display/FLINK/FLIP-486%3A+Introduce+A+New+DeltaJoin[FLIP-486] (with support for it https://fluss.apache.org/blog/releases/0.8/#delta-join[added in Fluss 0.8]), and covered in more detail in https://www.alibabacloud.com/blog/the-delta-join-in-apache-flink-architectural-decoupling-for-hyper-scale-stream-processing_602645[this blog post] from Alibaba.
 * Rion Williams is seeking feedback from the Flink community on his idea of a https://rion.io/2025/11/05/exploring-dynamic-sink-routing-in-apache-flink-via-demultiplexingsink/[DemultiplexingSink].
-* I've written https://rmoff.net/2025/08/18/kafka-to-iceberg-exploring-the-options/#_how_many_topics_do_you_have[previously] about the challenge of streaming data from multiple sources to multiple Iceberg tables with Flink; Apple's Swapna Marru writes about how this is made easier with the new https://flink.apache.org/2025/11/11/from-stream-to-lakehouse-kafka-ingestion-with-the-flink-dynamic-iceberg-sink/[Flink Dynamic Iceberg Sink] in Iceberg 1.10.
+* I've written link:/2025/08/18/kafka-to-iceberg-exploring-the-options/#_how_many_topics_do_you_have[previously] about the challenge of streaming data from multiple sources to multiple Iceberg tables with Flink; Apple's Swapna Marru writes about how this is made easier with the new https://flink.apache.org/2025/11/11/from-stream-to-lakehouse-kafka-ingestion-with-the-flink-dynamic-iceberg-sink/[Flink Dynamic Iceberg Sink] in Iceberg 1.10.
 * Ayden Adair built a very cool Flink-powered candy bowl for Halloween, and https://www.youtube.com/watch?v=sz8aX5-l9s8[made a video] to show it off.
 
 == Data Platforms, Architectures, and Modelling
@@ -268,7 +270,7 @@ Kelly Vaughn explains why in this article https://modernleader.is/posts/invisibl
 
 [NOTE]
 ====
-* If you like these kind of links you might like to read about https://rmoff.net/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
+* If you like these kind of links you might like to read about link:/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
 * If you have trouble accessing Medium posts, try using https://scribe.rip/[`scribe.rip`].
 ====
 
