--- a/content/post/kc-iceberg-glue.adoc
+++ b/content/post/kc-iceberg-glue.adoc
@@ -234,7 +234,7 @@ Tasks:
 ----
 
 This time the error is entirely self-inflicted.
-Hot off my blog post about https://rmoff.net/2025/06/24/writing-to-apache-iceberg-on-s3-using-flink-sql-with-glue-catalog/[doing this in Flink SQL], I had in my mind that the table needed a three-part qualification; `catalog.database.table`.
+Hot off my blog post about link:/2025/06/24/writing-to-apache-iceberg-on-s3-using-flink-sql-with-glue-catalog/[doing this in Flink SQL], I had in my mind that the table needed a three-part qualification; `catalog.database.table`.
 In fact, we only need to specify `database.table`.
 In addition I've realised that the table doesn't exist already, and by default the connector won't automagically create it—so let's fix that too.
 
@@ -1683,7 +1683,7 @@ Ideally we want to do something like this, and pick up _all_ topics matching a p
 But how to route them sensibly to an Iceberg table based on their _topic_ name, rather than a field within the payload itself (which is what the Iceberg sink's dynamic routing is based on).
 
 SMTs to the rescue again!
-This time one that's built into Kafka Connect: https://rmoff.net/2020/12/15/twelve-days-of-smt-day-6-insertfield-ii/[`InsertField`]
+This time one that's built into Kafka Connect: link:/2020/12/15/twelve-days-of-smt-day-6-insertfield-ii/[`InsertField`]
 
 [source,javascript]
 ----
