--- a/content/post/ngrok-dns.adoc
+++ b/content/post/ngrok-dns.adoc
@@ -31,7 +31,7 @@ Nope.
 % ERROR: Failed to acquire metadata: Local: Broker transport failure (Are the brokers reachable? Also try increasing the metadata timeout with -m <timeout>?)
 ----
 
-Spinning up https://rmoff.net/code/docker-compose-ngrok-kafka.yml[this Docker Compose] should have worked just fine (it did last year!). But for some reason my Kafka broker couldn't be reached (`Connection refused`).
+Spinning up link:/code/docker-compose-ngrok-kafka.yml[this Docker Compose] should have worked just fine (it did last year!). But for some reason my Kafka broker couldn't be reached (`Connection refused`).
 
 ## The Basic Setup
 
@@ -87,7 +87,7 @@ nc: connectx to 0.tcp.eu.ngrok.io port 13810 (tcp) failed: Connection refused
 
 _If this was a cop chase movie, at this point the camera would be panning to the side street where the villian is hiding and the police car just drove by…_
 
-Dusting off my troubleshooting command line toolbox, I tried a `mtr` (like `traceroute` but fancier): 
+Dusting off my troubleshooting command line toolbox, I tried a `mtr` (like `traceroute` but fancier):
 
 [source,bash]
 ----
@@ -193,11 +193,11 @@ Huh. `18.197.239.5` is different from `81.99.162.48`, definitely. Now that we're
 
 Well, just look at that:
 
-**`..Blocked by NextDNS`** 
+**`..Blocked by NextDNS`**
 
 Now the penny is starting to drop. If you're particularly observant you'll notice the error that I showed at the very top of this blog says `Connect to ipv4#0.0.0.0:16689 failed` —and `0.0.0.0` is what the `dig` above shows NextDNS resolves the ngrok hostname to.
 
-In the logs that NextDNS provides I can see: 
+In the logs that NextDNS provides I can see:
 
 image::/images/2024/05/nextdns01.webp[NextDNS screenshot showing DNS resolution for ngrok blocked by Threat Intelligence Feeds blocklist]
 
@@ -254,7 +254,7 @@ With ngrok on the Allowlist for NextDNS, everything works great. I'll probably l
 
 == Footnote: A final puzzle - why does `+trace` on `dig` bypass the filtering?
 
-This is the case on both NextDNS and Virgin Media. If I put the blocks back to how they were when I started looking at this and run `dig` normally, I get the blocked IP result as expected: 
+This is the case on both NextDNS and Virgin Media. If I put the blocks back to how they were when I started looking at this and run `dig` normally, I get the blocked IP result as expected:
 
 [source,bash]
 ----
